--- a/src/pages/Registration/Registration.css
+++ b/src/pages/Registration/Registration.css
@@ -3,7 +3,7 @@
     width: 100%;
     color: white;
     overflow: hidden;
-    background: #795548;;  /* fallback for old browsers */
+    background: #795548;  /* fallback for old browsers */
     background: linear-gradient(rgba(121, 85, 72, 0.803), rgba(121, 85, 72, 0.803)), url("../images/login-bg.jpg"); 
     background-size: cover;
     background-repeat: no-repeat;
